# VibePaper

./: .gitignore  APPROACHES.md  LICENSE  README.md  app.py  build.py  build_database.py  build_embeddings.py  edit_abstracts.py  export_favorites.py  fetch_crossref_abstracts.py  fetch_s2_abstracts.py  fetch_siggraph_history.py  paper_io.py  pyproject.toml  recommender.py
