[project]
name = "paper-rec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "flask>=3.1.2",
    "lxml>=6.0.2",
    "numpy>=2.4.2",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.2",
]
